# data-science-project

./: README.md  chapter02_mathematical-building-blocks.ipynb  pyproject.toml
guides/: setup.md
notebooks/: 00_overview.ipynb  README.md
notebooks/basic/: 01_strings.ipynb  03_lists.ipynb  04_dictionaries.ipynb  06_for_loops.ipynb  09_functions.ipynb  10_exception_handling.ipynb  11_dates_and_times.ipynb  12_regular_expressions.ipynb  13_numpy_arrays.ipynb  14_object_oriented_programming.ipynb
notebooks/data_processing/: 02_basic_data_cleaning.ipynb  07_data_visualization.ipynb
notebooks/data_retrieval/: 01_APIs.ipynb  02_Scraping.ipynb
