[project]
name = "data-science-project"
authors = ["Martin Petri Bagger"]
version = "0.1.0"
description = "This is the virtual environment for the course 'data science project' at Aarhus University."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "python-twitter>=3.5",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]
